Added Infinity limit to all stores

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -40,10 +40,10 @@ Ext.define('Rally.print.FeatureMap', {
       //console.log("Adding link", link);
       el.appendChild(link);
     });
-    console.log("#appCss",Ext.query("#appCss")[0]);
+    // console.log("#appCss",Ext.query("#appCss")[0]);
     el.appendChild(Ext.clone(Ext.query("#appCss")[0]));
     el.appendChild(main);
-    console.log('Printing', el);
+    // console.log('Printing', el);
     return el.innerHTML;
   },
 
@@ -96,7 +96,7 @@ Ext.define('CustomApp', {
     },
 
     constructor: function (config) {
-      console.log("constructor");
+      // console.log("constructor");
       var me = this;
       
       if (_.keys(me.getSettings()).length > 0)
@@ -104,7 +104,7 @@ Ext.define('CustomApp', {
       else
         me.settings = me.config.defaultSettings;
 
-      console.log("settings",me.settings);
+      // console.log("settings",me.settings);
 
       this.callParent([config]);
       this.mixins.observable.constructor.call(this, config);
@@ -266,7 +266,7 @@ Ext.define('CustomApp', {
 
     addContent: function(tb) {
 
-      console.log("addContent");
+      // console.log("addContent");
 
       var me = this;
 
@@ -274,6 +274,7 @@ Ext.define('CustomApp', {
 
       Ext.create('Rally.data.WsapiDataStore', {
         autoLoad: true,
+        limit : "Infinity",
         model: 'TypeDefinition',
         filters: [ {
           property: 'TypePath',
@@ -284,7 +285,7 @@ Ext.define('CustomApp', {
         listeners: {
           load: function (store, recs, success) {
             // debugger;
-            console.log("TypeDefinition:", success, recs );
+            // console.log("TypeDefinition:", success, recs );
 
             Ext.Array.each(recs[0].get('Attributes'), function (attribute) {
               if (attribute.ElementName !== 'ScheduleState') { return; }
@@ -305,11 +306,11 @@ Ext.define('CustomApp', {
         var colors = {};
         var rules = [];
 
-        console.log("settings",me.settings );
+        // console.log("settings",me.settings );
 
         // Ext.Object.each(me.getSettings(), function(k, v) {
         Ext.Object.each(me.settings, function(k, v) {
-          console.log(k,v);
+          // console.log(k,v);
           if (k.indexOf('state-color-') !== -1) {
             colors[k.replace('state-color-', '')] = v;
           }
@@ -323,7 +324,7 @@ Ext.define('CustomApp', {
           );
         });
 
-        console.log("colors",colors,states);
+        // console.log("colors",colors,states);
 
         Ext.util.CSS.createStyleSheet(rules.join('\n'), 'generated');
       });
@@ -331,6 +332,7 @@ Ext.define('CustomApp', {
       Ext.create('Rally.data.WsapiDataStore', {
         autoLoad: true,
         remoteFilter: false,
+        limit : "Infinity",
         model: 'TypeDefinition',
         sorters: [{
           property: 'Ordinal',
@@ -391,6 +393,7 @@ Ext.define('CustomApp', {
 
       Ext.create('Rally.data.WsapiDataStore', {
         model: me.piTypes['0'].get('TypePath'),
+        limit : "Infinity",
         autoLoad: true,
         fetch: ['ObjectID', 'FormattedID', 'Name', 'Value', 'Parent', 'Project', 'UserStories', 'Children', 'PreliminaryEstimate', 'DirectChildrenCount', 'LeafStoryPlanEstimateTotal', 'DisplayColor'],
         filters: tb.getQueryFilter(),
@@ -406,6 +409,7 @@ Ext.define('CustomApp', {
 
       Ext.create('Rally.data.WsapiDataStore', {
         model: 'HierarchicalRequirement',
+        limit : "Infinity",
         autoLoad: true,
         fetch: ['ObjectID', 'FormattedID', 'Name', 'ScheduleState', 'PlanEstimate', 'Feature', 'Parent', 'Project', 'Blocked', 'BlockedReason', 'Iteration', 'StartDate', 'EndDate', 'AcceptedDate', 'Predecessors', 'Successors'],
         filters: [{
@@ -500,6 +504,7 @@ Ext.define('CustomApp', {
       }
 
       Ext.create('Rally.data.WsapiDataStore', {
+        limit : "Infinity",
         model: me.piTypes['1'].get('TypePath'),
         autoLoad: true,
         filters: filter,
@@ -526,7 +531,8 @@ Ext.define('CustomApp', {
     },
 
     _storiesLoaded: function (store, recs, success) {
-      //console.log('Stories loaded', recs);
+      
+      console.log('Stories loaded', recs);
 
       var me       = this;
 
@@ -1140,6 +1146,7 @@ if(f[a]("text")){for(g.text=f.text;h.firstChild;)h.removeChild(h.firstChild);for
 
         });
     </script>
+
 
 
     <style type="text/css">
